src/objects/PSA_Resource_Stage__c.object
<CustomObject>
    <description>Staging object to hold new or updated resource-related information from an external system</description>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Length__c</fullName>
        <formula>LEN(PSA_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Absence_End_Date__c</fullName>
        <label>Absence End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Absence_Start_Date__c</fullName>
        <label>Absence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Change_Effective_Date__c</fullName>
        <label>Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Company_Name__c</fullName>
        <description>Passed from Workday, helpful to determine the Account for Contractor Resources</description>
        <inlineHelpText>Passed from Workday, helpful to determine the Account for Contractor Resources</inlineHelpText>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Contingent_Worker_Type__c</fullName>
        <label>Contingent Worker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business to Business (B2B) Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Agency Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Contractor (1099)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSA_Entity_Id__c</fullName>
        <label>Entity Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_GW_Integration_Id__c</fullName>
        <inlineHelpText>Id from source system</inlineHelpText>
        <label>GW Integration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Legal_First_Name__c</fullName>
        <label>Legal First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Legal_Last_Name__c</fullName>
        <label>Legal Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Manager__c</fullName>
        <description>An external id from the source system (Workday).  There must be another Resource Stage record with an External Id set to this value.</description>
        <label>Manager</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PSA_PS_Level__c</fullName>
        <label>PS Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Partner_Name_Id__c</fullName>
        <label>Partner Name Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PSA_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Product_Line_ID__c</fullName>
        <label>Product Line ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Status__c</fullName>
        <label>Resource Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_State_Province__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_WD_Region_ID__c</fullName>
        <inlineHelpText>Maps the Workday Region Id (2 character code) to the PSA Region</inlineHelpText>
        <label>WD Region ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_WD_Work_Calendar_Name__c</fullName>
        <label>WD Work Calendar Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Worker_Id__c</fullName>
        <externalId>true</externalId>
        <label>Worker Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PSA_Worker_Type__c</fullName>
        <label>Worker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent Worker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Worker_Id_Length__c</fullName>
        <formula>LEN(PSA_Worker_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worker Id Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PSA Resource Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Worker_Id__c</columns>
        <columns>PSA_Email__c</columns>
        <columns>PSA_First_Name__c</columns>
        <columns>PSA_Last_Name__c</columns>
        <columns>PSA_PS_Level__c</columns>
        <columns>PSA_Resource_Status__c</columns>
        <columns>PSA_WD_Region_ID__c</columns>
        <columns>PSA_Country__c</columns>
        <columns>PSA_State_Province__c</columns>
        <columns>PSA_Processed_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RSTG-{00000}</displayFormat>
        <label>Resource Stage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Resource Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>